code/apps/envds-files/base/files-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envds-files-base
  namespace: envds
  labels:
    app: envds-files-base
spec:
  selector:
    app: envds-files-base
  ports:
  - name: http
    protocol: TCP
    port: 9080
    targetPort: 9080
  # - name: https
  #   port: 8883
  #   targetPort: 8883
  # type: LoadBalancer
  type: ClusterIP
