code/apps/envds-files/base/files-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envds-files-ingress
  namespace: envds
  # labels:
  #   app: envds
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares:
      envds-envds-files-stripprefix@kubernetescrd
      # default-erddap-rewrite@kubernetescrd
spec:
  rules:
  - http:
      paths:
      # - path: /erddap
      - path: /envds/files
        pathType: Prefix
        # pathType: Exact
        backend:
          service:
            name: envds-files-base
            port:
              number: 8080
